--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -126,8 +126,16 @@
   }
 }
 
+@media (max-width: 380px) {
+  .main__content_desc {
+    font-size: 13px!important;
+  }
+}
+
 @media (max-width: 350px) {
   span {
     font-size: 10px!important;
   }
 }
+
+
